--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fontsource-variable/inter": "^5.0.16",
     "clsx": "^2.0.0",
     "radix-icons-svelte": "^1.2.1",
     "tailwind-merge": "^2.1.0",
