--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.16",
+    "bits-ui": "^0.11.7",
     "clsx": "^2.0.0",
     "radix-icons-svelte": "^1.2.1",
     "tailwind-merge": "^2.1.0",
