--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fontsource-variable/inter": "^5.0.16",
     "bits-ui": "^0.11.7",
     "clsx": "^2.0.0",
+    "mode-watcher": "^0.1.2",
     "radix-icons-svelte": "^1.2.1",
     "tailwind-merge": "^2.1.0",
     "tailwind-variants": "^0.1.18"
