--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
+    "drizzle-kit": "^0.20.6",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.30.0",
@@ -35,8 +36,10 @@
   "type": "module",
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.16",
+    "@libsql/client": "0.4.0-pre.5",
     "bits-ui": "^0.11.7",
     "clsx": "^2.0.0",
+    "drizzle-orm": "^0.29.1",
     "mode-watcher": "^0.1.2",
     "radix-icons-svelte": "^1.2.1",
     "tailwind-merge": "^2.1.0",
