--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
@@ -31,8 +32,7 @@
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0"
+    "vite": "^5.0.0"
   },
   "type": "module",
   "dependencies": {
@@ -43,6 +43,7 @@
     "drizzle-orm": "^0.29.1",
     "mode-watcher": "^0.1.2",
     "radix-icons-svelte": "^1.2.1",
+    "svelte-radix": "^0.6.2",
     "tailwind-merge": "^2.1.0",
     "tailwind-variants": "^0.1.18"
   }
