--- a/package.json
+++ b/package.json
@@ -12,38 +12,39 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/adapter-auto": "^3.1.0",
+    "@sveltejs/kit": "^2.0.8",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
     "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.20.6",
-    "eslint": "^8.55.0",
+    "drizzle-kit": "^0.20.10",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.33",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-svelte": "^3.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.9"
+    "vite": "^5.0.11"
   },
   "type": "module",
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.16",
-    "@libsql/client": "0.4.0-pre.5",
-    "bits-ui": "^0.11.7",
-    "clsx": "^2.0.0",
-    "drizzle-orm": "^0.29.1",
+    "@libsql/client": "0.4.0-pre.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "bits-ui": "^0.13.6",
+    "clsx": "^2.1.0",
+    "drizzle-orm": "^0.29.3",
     "mode-watcher": "^0.1.2",
     "radix-icons-svelte": "^1.2.1",
-    "tailwind-merge": "^2.1.0",
-    "tailwind-variants": "^0.1.18"
+    "tailwind-merge": "^2.2.0",
+    "tailwind-variants": "^0.1.20"
   }
 }
