--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "drizzle-orm": "^0.29.3",
     "mode-watcher": "^0.1.2",
     "radix-icons-svelte": "^1.2.1",
+    "svelte-legos": "^0.2.2",
     "tailwind-merge": "^2.2.0",
     "tailwind-variants": "^0.1.20"
   }
